tela de inicio e logo

--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,3 +1,15 @@
 page-home {
-
+.logoTipo{
+    width: 60%;
+    margin-left: 25%;
+    margin-bottom: 5%;
+    // margin-top: 5%;
+}
+.btnLogin{
+    background-color: #0633FD;
+}
+.corTitulo{
+    color: rgba(6, 39, 187, 0.89);
+    padding-left: 25%;
+}
 }
