homepage and icons

--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -5,6 +5,22 @@ page-home {
     margin-bottom: 5%;
     // margin-top: 5%;
 }
+
+.logoTipo2{
+    width: 50%;
+    margin-left: 25%;
+    margin-bottom: 5%;
+    margin-top: 5%;
+}
+.card-ion-icon{
+    width: 50%;
+    margin: auto;
+    left: 50%;
+}
+.card-subtitle{
+    text-align: center;
+}
+
 .btnLogin{
     background-color: #0633FD;
 }
