tela login - buttons

--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -1,8 +1,7 @@
 page-login {
 .logoTipo{
     width: 60%;
-    margin-left: 25%;
-    margin-bottom: 5%;
-    // margin-top: 5%;
+    margin-left: auto;
+    margin-right: auto;
 }
 }
