--- a/src/pages/avaliacoes/avaliacao-coronariano/avaliacao-coronariano.scss
+++ b/src/pages/avaliacoes/avaliacao-coronariano/avaliacao-coronariano.scss
@@ -1,3 +1,32 @@
 page-avaliacao-coronariano {
+    .help-block{
+        font-size:10px;}
+        
+    .alpaca-control-label{
+        font-weight:700;
+        font-size:19px;
+        color:#333 !important;}
+        
+    .form-control{
+        border-color:none !important;}
+        
+    .alpaca-control{
+        border-color:none !important;}
+        
+    .help-block{
+        color:#333 !important;}
+        
+    .container{
+        width:wrap !important;}
+        
+    .glyphicon-info-sign{
+        font-size:20px;
+        margin-left:10px;}
+    
+    #titulo{
+        padding-left: 10px;
+        background-color: #4D6DE4;
+        color: #ffffff; 
+    }
 
 }
