page Risco Coronariano atualizada

--- a/src/pages/avaliacoes/avaliacao-coronariano/avaliacao-coronariano.scss
+++ b/src/pages/avaliacoes/avaliacao-coronariano/avaliacao-coronariano.scss
@@ -25,8 +25,8 @@ page-avaliacao-coronariano {
     
     #titulo{
         padding-left: 10px;
-        background-color: #4D6DE4;
-        color: #ffffff; 
+        background-color: #2A8CFB;
+        color: #FDFBFB;
+        
     }
-
 }
