avaliaoes pages concluida

--- a/src/pages/avaliacoes/avaliacao-coronariano/avaliacao-coronariano.scss
+++ b/src/pages/avaliacoes/avaliacao-coronariano/avaliacao-coronariano.scss
@@ -25,7 +25,7 @@ page-avaliacao-coronariano {
     
     #titulo{
         padding-left: 10px;
-        background-color: #2A8CFB;
+        background-color: #72ADEF;
         color: #FDFBFB;
         
     }
