--- a/src/pages/avaliacoes/avaliacao-parq/avaliacao-parq.scss
+++ b/src/pages/avaliacoes/avaliacao-parq/avaliacao-parq.scss
@@ -25,7 +25,7 @@ page-avaliacao-parq {
     
     #titulo{
         padding-left: 10px;
-        background-color: #4D6DE4;
+        background-color: #72ADEF;
         color: #ffffff; 
     
     }
