--- a/src/pages/avaliacoes/avaliacao-risco/avaliacao-risco.scss
+++ b/src/pages/avaliacoes/avaliacao-risco/avaliacao-risco.scss
@@ -25,7 +25,7 @@ page-avaliacao-risco {
     
     #titulo{
         padding-left: 10px;
-        background-color: #4D6DE4;
+        background-color: #72ADEF;
         color: #ffffff; 
     
     }
